--- a/rmarkdown/pileup_Pbp2_closeup.Rmd
+++ b/rmarkdown/pileup_Pbp2_closeup.Rmd
@@ -1,13 +1,15 @@
 ---
 title: "Pileup Plots for Pbp2 analysis"
 author: "Jing Qi Chong"
+date: "7th October 2022"
 output: html_document
 ---
 
 ## Summary
-Generates pileup plot for Khd1 CRAC data on specific regions of specific Khd1 target genes that are specified in the file "Pbp2_TargetGeneNamesOnly.txt` located in the input_annotation directory. These show detailed profiles of read counts, including nucleotide-specific mutations and deletions, along selected transcripts.
 
-This script relies on "pileup" files in tab-separated text format produced by `pyPileup` script while running the pipeline, put in the directory `~/CRAC_analysis_2022/Pbp2/results/pyPileup_analyses/`. So it must be run after the nf_CRACpipeline, read the repository `README.md` for details.
+Generates pileup plot for Pbp2 CRAC data on specific regions of specific Pbp2 target genes that are specified in the file `Pbp2_TargetGeneNamesOnly.txt` located in the input_annotation directory. These show detailed profiles of read counts, including nucleotide-specific mutations and deletions, along selected transcripts.
+
+This script relies on "pileup" files in tab-separated text format produced by `pyPileup` script while running the pipeline, put in the directory `~/CRAC_analysis_2022/Pbp2_CRAC_analysis/results/pyPileup_analyses/`. So it must be run after the nf_CRACpipeline, read the repository `README.md` for details.
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE, message = FALSE, warning = FALSE, cache= TRUE,
@@ -143,6 +145,7 @@ annotate_CS <- function(mid, ...) {
 ```
 
 ## Load Pbp2 sample for analysis
+
 ```{r load_data}
 P90_Ab_df <- read_pileuptxt(here::here("results", "pyPileup_analyses", "raw_trimmed_NNNATTAGC_90_Pbp2-HF_control_Ab_pileups.txt"),converturidine = TRUE)
 P90_Ab_filtered_5_df <- P90_Ab_df %>%
@@ -150,49 +153,52 @@ P90_Ab_filtered_5_df <- P90_Ab_df %>%
   filter( hits > 100, percent_del >= 5)
 ```
 
-##Generate table containing the genes exceeding the threshold
+## Generate table containing the genes exceeding the threshold
+
 ```{r generate table}
 P90_Ab_targetted_genes <- data.frame((unique(sort(P90_Ab_filtered_5_df$target))))
 ```
 
-##SML1
-## Plot pileup along SML1 transcript as a line
-```{r plot_ASH1line,dependson = c("pileup_functions","load_data"),fig.height = 2,fig.width=4}
-plot_pileuphits_line(filter(P90_Ab_df, target == "SML1") )
+## SIM1
+### Plot pileup along SIM1 transcript as a line
+
+```{r plot_SIM1line,dependson = c("pileup_functions","load_data"),fig.height = 2,fig.width=4}
+plot_pileuphits_line(filter(P90_Ab_df, target == "SIM1") )
 ```
 
-## Plot pileup focus on peaks SIM1
-```{r plot_SML1focus,dependson = c("pileup_functions","load_data"),fig.height = 4,fig.width=6}
-SML1wide_df <- filter(P90_Ab_df, 
-                         target == "SML1", 
-                         position >= 410, 
-                         position <= 500)
+### Plot pileup focus on peaks SIM1
+```{r plot_SIM1focus,dependson = c("pileup_functions","load_data"),fig.height = 4,fig.width=6}
+SIM1wide_df <- filter(P90_Ab_df, 
+                         target == "SIM1", 
+                         position >= 1250, 
+                         position <= 1500)
 
-P90_Ab_wide_plot <- plot_pileup_one(SML1wide_df, include = "allsubdel") + 
-    labs(title = "SML1 , pileup plot") 
+P90_Ab_wide_plot <- plot_pileup_one(SIM1wide_df, include = "allsubdel") + 
+    labs(title = "SIM1 , pileup plot") 
     
 P90_Ab_wide_plot
-##ggsave(plot = SML1wide_plot, filename = "../results/figure_pileup/SML1_CS_plot.pdf",
-#       height = 3, width=6, device = "pdf")
+#ggsave(plot = SIM1wide_plot, 
+ #      filename = here::here("results", "figure_pileup", "SIM1_CS_plot.pdf"),
+  #     height = 3, width=6, device = "pdf")
 ```
 
 
-## Plot pileup focus on SML1 specific coding region
+### Plot pileup focus on SIM1 specific coding region
 
-```{r plot_SML1seq,dependson = c("pileup_functions","load_onetable"),fig.height = 3, fig.width=8}
-SML1seq_df <- filter(P90_Ab_df, 
-                      target == "SML1", 
-                      position >=410, 
-                      position <=500)
-SML1seq_plot <- plot_pileup_one(SML1seq_df, 
+```{r plot_SIM1seq,dependson = c("pileup_functions","load_onetable"),fig.height = 3, fig.width=8}
+SIM1seq_df <- filter(P90_Ab_df, 
+                      target == "SIM1", 
+                      position >= 1250, 
+                      position <= 1300)
+SIM1seq_plot <- plot_pileup_one(SIM1seq_df, 
                                    include = "allsubdel", 
                                    nucseq = TRUE, nuctxtsize = 2) + 
-    labs(title = "SML1 pileup plot")
-SML1seq_plot
+    labs(title = "SIM1 pileup plot")
+SIM1seq_plot
 
-ggsave(plot = SML1seq_plot, 
-       filename = here::here("results", "figure_pileup", "SML1_seqplot.png"),
-       height = 3, width=10, device = "png")
+#ggsave(plot = SIM1seq_plot, 
+ #      filename = here::here("results", "figure_pileup", "SIM1_seqplot.png"),
+  #     height = 3, width=10, device = "png")
 ```  
 
 ## Find CNN motif positions separately for each transcript
@@ -214,8 +220,21 @@ CNN_positions_bytx
 
 ```
 
-##Plot pileup near Khd1 cross-linked sites
+## Plot pileup near Pbp2 cross-linked sites
 ```{r plot_all_reproducibility}
+#SIM1
+SIM1_widerep_df <- filter(P90_Ab_df, 
+                         target == "SIM1",
+                         position >= 1250, 
+                         position <= 1300 )
+
+SIM1_widerep_plot <- 
+    plot_pileup_one(SIM1_widerep_df, include = "allsubdel",nucseq = TRUE, nuctxtsize = 3) + 
+    labs(title = "SIM1", x = "position from TSS") +
+  xlim(min(SIM1_widerep_df$position) - 1,max(SIM1_widerep_df$position) + 1) +
+  theme(plot.margin = margin(t=10,b = 25)) 
+  #  annotate_CNN(filter(CNN_positions_bytx,target=="SIM1")$mid) 
+
 #SML1
 SML1_widerep_df <- filter(P90_Ab_df, 
                          target == "SML1",
@@ -269,7 +288,8 @@ NPC2_2_widerep_plot <-
   #  annotate_CNN(filter(CNN_positions_bytx,target=="NPC2")$mid) 
 
 pileup_plot_allgenes <-
-  plot_grid(SML1_widerep_plot, 
+  plot_grid(SIM1_widerep_plot,
+            SML1_widerep_plot, 
             DED1_widerep_plot, 
             NPC2_1_widerep_plot, 
             NPC2_2_widerep_plot,
@@ -279,8 +299,8 @@ pileup_plot_allgenes <-
 pileup_plot_allgenes
 
 #ggsave(plot = pileup_plot_allgenes, 
- #       filename = "../figure_pileup/Composite_CS_CNN_pileupplot.png",
-  #      height = 8, width = 9, device = "png")
+ #      filename = here::here("results", "figure_pileup", "Composite_CS_CNN_pileupplot.png"),
+  #     height = 8, width = 9, device = "png")
 
 ```
 
